[package]
name = "udpserver"
version = "0.1.0"
authors = ["mang"]

[dependencies]
rustc-serialize = "0.3"
bincode = "0.6.0"
mio = "0.6"
mioco = "*"
env_logger = "*"
net2 = "*"
log = "*"
crc = "1.3.0"
lazy_static = "0.2"
rand = "0.3"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
